<resources>
    <string name="app_name" translatable="false">I Time U</string>

    <!-- setting name -->
    <string name="minutes">minutes</string>
    <string name="sessions">sessions</string>
    <string name="general">General</string>
    <string name="workTime">Work session duration</string>
    <string name="breakTime">Break duration</string>
    <string name="longBreakTime">Long break duration</string>
    <string name="sessionNumber">Work sessions before a long break</string>
    <string name="sessionOver">When a session is over</string>
    <string name="playSound">play sound when session ends</string>
    <string name="vibrate">vibrate when session ends</string>

    <!--  menubar name-->
    <string name="setting">setting</string>
    <string name="about">about</string>
    <string name="timer" translatable="false">timer</string>
    <string name="list">list</string>
    <string name="statistics">statistics</string>

    <!--  timer button string-->
    <string name="time" translatable="false">00:25</string>
    <string name="start" translatable="false">start</string>
    <string name="stop" translatable="false">stop</string>
    <string name="example" translatable="false">example</string>

    <!-- IntroSlide.java -->
    <string name="intro_page1_title" translatable="false">Remember</string>
    <string name="intro_page1_description">25, 5, 4, and 20</string>
    <string name="intro_page2_title" translatable="false">25: Pomodoro</string>
    <string name="intro_page2_description">During 25 minutes,\ndo your task with no \'stop\'\nWe refer the unit to pomodoro</string>
    <string name="intro_page3_title" translatable="false">5: Short break time</string>
    <string name="intro_page3_description">Take 5 minutes off\nafter one pomodoro is done</string>
    <string name="intro_page4_title" translatable="false">4: Four pomodoro\n20: Long break time</string>
    <string name="intro_page4_description">Take 20 minutes off\nafter every 4 pomodoro is done</string>
    <string name="intro_page5_title" translatable="false">Good Luck</string>
    <string name="intro_page5_description">We hope you achieve purpose\nwith I TIME U</string>

    <!-- EditorActivity.java -->

    <!-- editor view's title -->
    <string name="editor_title_add" translatable="false">add</string>
    <string name="editor_title_edit" translatable="false">edit</string>

    <!-- If name edit view is blank then -->
    <string name="input_name_toast">You should input your name</string>

    <!-- Create item -->
    <string name="create_item_fail">Fail to create item</string>
    <string name="create_item_success">Success to create item</string>

    <!-- Update item-->
    <string name="update_item_fail">Fail to update item</string>
    <string name="update_item_success">Success to update item</string>

    <string name="editor_status_invalid">Invalid status</string>

    <!-- Reset total unit TextView's text-->
    <string name="reset_total_unit">1</string>

    <!-- select date -->
    <string name="editor_invalid_date">Selected date cannot be less than current date</string>

    <!-- Alert unsaved change message-->
    <string name="unsaved_change_msg">Unsaved change</string>
    <!-- discard or keep editing -->
    <string name="discard_btn">Discard</string>
    <string name="keep_editing_btn">Keep editing</string>

    <!-- ListItemFragment.java -->

    <!-- long click item -->
    <string name="listitem_this_item_started">You can not modify or delete this task. The task already started. Before do this, stop timer.</string>

    <!-- check status -->
    <string name="already_start">Another task is already started.</string>
    <string name="already_done">This task is already done</string>

    <!-- check date -->
    <string name="not_today">The selected date is not today</string>

    <!-- Delete confirm dialog -->
    <string name="delete_confirm_msg">Do you want to delete this item?</string>
    <string name="delete_btn">Delete</string>
    <string name="cancel_btn">Cancel</string>

    <!-- Delete item -->
    <string name="delete_item_fail">Fail to delete</string>
    <string name="delete_item_success">Success to delete</string>

    <!-- Fail to delete -->
    <string name="listitem_cannot_delete">You can not delete this item.</string>

    <!-- Period hint -->
    <string name="statistics_startdate_hint">select a start date</string>
    <string name="statistics_enddate_hint">select an end date</string>

    <!-- activity_editor.xml -->
    <string name="input_name_hint">name (essential)</string>
    <string name="input_detail_hint">detail (optional)</string>
    <string name="unit_txt_view_editor">pomodoro</string>
    <string name="default_total_unit_editor" translatable="false">1</string>
    <string name="ok_btn">OK</string>
    <string name="editor_date_txt_view">date</string>
    <string name="editor_name_count_default" translatable="false">0 / 15</string>
    <string name="editor_detail_count_default" translatable="false">0 / 20</string>

    <!-- item.xml -->
    <string name="item_status_imageview">show status of the item</string>
    <string name="unit_divider" translatable="false">/</string>

    <!-- activity_list.xml -->
    <string name="empty_title_str">The list is empty</string>
    <string name="empty_subtitle_str">Add the to-do list item</string>
    <string name="result">RESULT</string>

    <!-- MainActivity.java -->
    <string name="tab_list">list</string>
    <string name="tab_timer">timer</string>
    <string name="tab_statistics">graph</string>
    <string name="tab_setting">setting</string>
    <string name="tab_about">about</string>

    <!-- fragment_about.xml -->
    <string name="about_title">About</string>
    <string name="about_version">Version</string>
    <string name="about_licenses">Open licenses</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_language">Support language</string>

    <!-- fragment_list_item -->
    <string name="listitem_previous_date_description">get date from previous date</string>
    <string name="listitem_next_date_description">get date from next date</string>

    <!-- activity_licenses.xml -->
    <string name="back">Back</string>
    <string name="datepicker_name" translatable="false">Material Date Time Picker</string>
    <string name="licenses_datepicker" translatable="false">Copyright (&#169;) 2015 Wouter Dullaert


        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="datepicker_link" translatable="false"><a href="https://github.com/wdullaer/MaterialDateTimePicker">
        MaterialDateTimePicker</a></string>

    <string name="mp_chart_name" translatable="false">MP Andorid Chart</string>
    <string name="licenses_mp_chart" translatable="false">Copyright (&#169;) 2016 Philipp Jahoda


        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="mp_chart_link" translatable="false"><a href="https://github.com/PhilJay/MPAndroidChart">
        MPAndroidChart</a></string>

    <string name="app_intro_name" translatable="false">App Intro</string>
    <string name="licenses_app_intro" translatable="false"> Copyright (&#169;) 2015 Paolo Rotolo
   Copyright (&#169;) 2016 Maximilian Narr

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.</string>
    <string name="app_intro_link" translatable="false"><a href="https://github.com/apl-devs/AppIntro">
        AppIntro</a></string>

    <string name="statistics_name" translatable="false">Images of statistics, timer</string>
    <string name="licenses_statistics" translatable="false">Free for commercial use (Include link to authors website)</string>
    <string name="statistics_link" translatable="false"><a href="https://makoto.dunked.com/">Mariano Tardon</a></string>

    <string name="empty_image_name" translatable="false">Empty image</string>
    <string name="licenses_empty_image" translatable="false">Free for commercial use (Include link to authors website)</string>
    <string name="empty_image_link" translatable="false"><a href="https://www.iconfinder.com/webhostingmedia">David Cross</a></string>

    <string name="intro_image_name" translatable="false">Intro images</string>
    <string name="licenses_intro_image" translatable="false">Free for commercial use (Include link to authors website)</string>
    <string name="intro_image_link" translatable="false"><a href="https://www.iconfinder.com/Blinks">Sergey Vrenev</a></string>

    <!-- arrays.xml : spinner items -->
    <string name="arrays_week">WEEK</string>
    <string name="arrays_month">MONTH</string>
    <string name="arrays_custom">CUSTOM</string>

    <!-- fragment_statistics.xml -->
    <string name="start_to_end" translatable="false">-</string>
    <string name="result_txt_view">RESULT : </string>
    <string name="period_txt_view">PERIOD : </string>

    <!-- StatisticsFragment.java -->
    <string name="unit_label">Done pomodoro units</string>
    <string name="total_unit_label">Total pomodoro units</string>
    <string name="invalid_period1">The period is invalid</string>
    <string name="invalid_period2">The period should more than 1 day</string>
    <string name="statisitcs_no_data">Select period what you want.</string>

    <!-- activity_support_language.xml -->
    <string name="support_language_english">English</string>
    <string name="support_language_korean">한국어</string>
    <string name="setting_advanced">Advanced</string>
    <string name="setting_continuous_timer">Run the timer continuously</string>
    <string name="setting_shutdown">Shut down this app when running another app</string>
</resources>
