<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.itti7.itimeu.EditorActivity">

    <TextView
        android:id="@+id/editor_title_txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/input_name_hint" />

    <EditText
        android:id="@+id/quantity_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/input_quantity_hint" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/unit_txt_view_editor"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/unit_minus_btn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_unit_minus_false" />

        <TextView
            android:id="@+id/get_total_unit_txt_view"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/default_total_unit_editor"
            android:textSize="16sp" />


        <ImageButton
            android:id="@+id/unit_plus_btn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_unit_plus_true" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/cancel_btn"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/add_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/ok_btn"
            android:textColor="#ffffff" />
    </GridLayout>
</LinearLayout>