<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itto3.itimeu.SettingFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="30dp"
            android:text="@string/general"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:text="@string/workTime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <SeekBar
                android:id="@+id/work_seek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="7.5"
                android:max="90"
                android:progress="25" />

            <EditText
                android:id="@+id/work_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberSigned"
                android:text="25" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"
                android:text="minutes" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#C1C1C1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:text="@string/breakTime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <SeekBar
                android:id="@+id/break_seek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="7.5"
                android:max="60"
                android:progress="5" />

            <EditText
                android:id="@+id/break_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberSigned"
                android:text="5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"
                android:text="minutes" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#C1C1C1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:text="@string/longBreakTime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <SeekBar
                android:id="@+id/long_break_seek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="7.5"
                android:max="90"
                android:progress="20" />

            <EditText
                android:id="@+id/long_break_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberSigned"
                android:text="20" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"
                android:text="minutes" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#C1C1C1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:text="@string/sessionNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <SeekBar
                android:id="@+id/session_number_seek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="7.5"
                android:max="10"
                android:progress="4" />

            <EditText
                android:id="@+id/session_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberSigned"
                android:text="4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="2"
                android:text="sessions" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#C1C1C1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="40dp"
            android:text="@string/sessionOver"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:layout_weight="8.5"
                android:text="@string/playSound" />

            <CheckBox
                android:id="@+id/sound_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:checked="true" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#C1C1C1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_weight="8.5"
                android:text="@string/vibrate" />

            <CheckBox
                android:id="@+id/vibrate_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#C1C1C1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="40dp"
            android:text="@string/setting_advanced"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:layout_weight="8.5"
                android:text="@string/setting_continuous_timer" />

            <CheckBox
                android:id="@+id/setting_continuous_timer_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
